fix: formatting, permalink, and list spacing

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -87,10 +87,12 @@ figcaption
 	margin: -2em 0 3em
 
 p,
-ol,
-ul,
 pre
 	margin-bottom: $p_medium
+
+ol,
+ul
+	margin: $p_small 0
 
 li
 	margin-bottom: $p_small
